# readwise-digest

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  get_latest.py  justfile  main.py  pyproject.toml  server.py  show_metadata.py  sync_data.py
.github/workflows/: ci.yml
docs/adr/: 001-architecture-overview.md  002-error-handling-strategy.md  003-polling-service-design.md
src/readwise_digest/: __init__.py  cli.py  client.py  digest.py  exceptions.py  logging_config.py  models.py  poller.py  utils.py
src/readwise_digest/database/: __init__.py  database.py  models.py  sync.py
src/readwise_digest/web/: __init__.py  api.py  app.py
tests/: __init__.py  conftest.py  test_client.py  test_digest.py  test_models.py
webapp/: index.html
