[project]
name = "readwise-digest"
version = "0.1.0"
description = "A comprehensive Python SDK for the Readwise API with polling and digest functionality"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.25.0",
    "python-dotenv>=0.19.0",
]
authors = [
    {name = "Readwise Digest", email = "noreply@example.com"}
]
license = {text = "MIT"}
keywords = ["readwise", "api", "highlights", "books", "reading"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]

[project.urls]
Homepage = "https://github.com/example/readwise-digest"
Repository = "https://github.com/example/readwise-digest"
Documentation = "https://github.com/example/readwise-digest#readme"
Issues = "https://github.com/example/readwise-digest/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "responses>=0.23.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0",
    "types-requests>=2.25.0",
]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "responses>=0.23.0",
]

[project.scripts]
readwise-digest = "readwise_digest.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "responses>=0.25.7",
]
